--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "jasmine-jquery": "~2.1.1",
-    "angular-bootstrap": "angular-ui-bootstrap-bower#0.11.0"
+    "angular-bootstrap": "angular-ui-bootstrap-bower#0.11.0",
+    "angular-jasmine-matchers": "angularjs-jasmine-matchers#*"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
